src/test/deca/context/invalid/created/decl-void-var.deca
//Description :
// Declaration d'une variable de type void
//
// Resultats :
// Erreur


{
    void x;
}
